--- a/TODO
+++ b/TODO
@@ -1,1 +1,4 @@
 1. Esporre i path dell'output dei file nel create_json_dois.py
+
+2. Aggiungere nel main la parte delle funzioni per i file "garbage" (file che contengono record che hanno delle
+anomalie)
